[project]
name = "orangenetdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-document-dates>=3.6.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.2",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-static-i18n>=1.3.1",
    "pymdown-extensions>=10.21",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
